--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -13,7 +13,10 @@
 		<div class="row">
 			<div class='slide'>
 				<h1>@Model.Slide.Title</h1>
-				@Html.Partial("_Quiz", Model)
+				@if (Model.Slide is QuizSlide)
+				{
+					@Html.Action("Quiz", "Quiz", new { slide = Model.Slide as QuizSlide, courseId = Model.CourseId, userId = Model.UserId })
+				}
 				@Html.DisplayFor(m => m.Slide.Blocks)
 				@if (Model.Slide is ExerciseSlide)
 				{
