--- a/src/uLearn.Web/Views/Quiz/_FillInBlock.cshtml
+++ b/src/uLearn.Web/Views/Quiz/_FillInBlock.cshtml
@@ -4,10 +4,10 @@
 	var value = "";
 	var quizRes = "";
 	var quizBlock = (FillInBlock)Model.CurrentBlock;
-	if (Model.QuizState != QuizState.NotPassed && Model.CourseModel.AnswersToQuizes[quizBlock.Id].FirstOrDefault() != null)
+	if (Model.QuizState != QuizState.NotPassed && Model.QuizModel.AnswersToQuizes[quizBlock.Id].FirstOrDefault() != null)
 	{
-		value = Model.CourseModel.AnswersToQuizes[quizBlock.Id].FirstOrDefault();
-		quizRes = Model.QuizState == QuizState.Total ? (Model.CourseModel.AnswersToQuizes[quizBlock.Id][1] == "False" ? "wrong-quiz" : "right-quiz") : "";
+		value = Model.QuizModel.AnswersToQuizes[quizBlock.Id].FirstOrDefault();
+		quizRes = Model.QuizState == QuizState.Total ? (Model.QuizModel.AnswersToQuizes[quizBlock.Id][1] == "False" ? "wrong-quiz" : "right-quiz") : "";
 	}
 	var sample = quizBlock.Sample;
 	<div class="quiz quiz-block-input">
