quiz explanation design

--- a/src/uLearn.Web/Views/Quiz/_TrueFalseBlock.cshtml
+++ b/src/uLearn.Web/Views/Quiz/_TrueFalseBlock.cshtml
@@ -31,6 +31,6 @@
 	</div>
 	if (Model.QuizState == QuizState.Total && !String.IsNullOrEmpty(quizBlock.Explanation))
 	{
-		<div> <h4>Пояснение:</h4> @quizBlock.Explanation</div>
+		<div class="text-muted">@quizBlock.Explanation</div>
 	}
 }
