--- a/src/uLearn.Web/Views/Quiz/_FillInBlock.cshtml
+++ b/src/uLearn.Web/Views/Quiz/_FillInBlock.cshtml
@@ -20,7 +20,7 @@
 		<div>Правильный ответ: @sample</div>
 		if (!String.IsNullOrEmpty(quizBlock.Explanation))
 		{
-			<div> <h4>Пояснение:</h4> @quizBlock.Explanation</div>
+			<div class="text-muted">@quizBlock.Explanation</div>
 		}
 	}
 }
