add complexity for each question in Quiz Analytics

--- a/src/uLearn.Web/Views/Quiz/Analytics.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Analytics.cshtml
@@ -28,7 +28,9 @@
 				<th style="border-bottom: none" title="при наведении на шапку таблицы, можно прочитать условие задания и вариант ответа">наведи на меня!</th>
 				@foreach (var block in Model.QuizSlide.Quiz.Blocks.OfType<AbstractQuestionBlock>().OrderBy(x => x.QuestionIndex))
 				{
-					<th title="@block.Text" colspan="@GetColSpan(block)">@block.Text</th>
+					int count;
+					Model.RightAnswersCount.TryGetValue(block.QuestionIndex.ToString(), out count);
+					<th title="@block.Text" colspan="@GetColSpan(block)">@block.Text (@count/@Model.UserAnswers.Count)</th>
 					if (maxQuestionIndex == block.QuestionIndex)
 					{
 						break;
