--- a/src/uLearn.Web/Views/Quiz/Analytics.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Analytics.cshtml
@@ -22,11 +22,11 @@
 <h2>Статистика ответов</h2>
 <div>
 	@{ var maxQuestionIndex = Model.QuizSlide.Quiz.Blocks.OfType<AbstractQuestionBlock>().OrderBy(x => x.QuestionIndex).Max(x => x.QuestionIndex);}
-	<table id="myTable" class="tablesorter">
+	<table id="myTable" class="invertedTablesorter">
 		<thead>
 			<tr>
-				<th style="border-bottom: none" title="при наведении на шапку таблицы, можно прочитать условие задания и вариант ответа">наведи на меня!</th>
-				<th style="border-bottom: none">Группа</th>
+				<th style="border-bottom: none" title="при наведении на шапку таблицы, можно прочитать условие задания и вариант ответа" data-sorter="true">наведи на меня!</th>
+				<th style="border-bottom: none" data-sorter="true">Группа</th>
 				<th style="border-bottom: none"></th>
 				@foreach (var block in Model.QuizSlide.Quiz.Blocks.OfType<AbstractQuestionBlock>().OrderBy(x => x.QuestionIndex))
 				{
@@ -41,8 +41,8 @@
 				}
 			</tr>
 			<tr>
-				<th style="border-top: none" title="при наведении на шапку таблицы, можно прочитать условие задания и вариант ответа"></th>
-				<th style="border-top: none"></th>
+				<th style="border-top: none" title="при наведении на шапку таблицы, можно прочитать условие задания и вариант ответа" data-sorter="true"></th>
+				<th style="border-top: none" data-sorter="true"></th>
 				<th style="border-top: none; border-bottom: none"></th>
 				@foreach (var block in Model.QuizSlide.Quiz.Blocks.OfType<AbstractQuestionBlock>().OrderBy(x => x.QuestionIndex))
 				{
@@ -165,3 +165,5 @@
 		</tbody>
 	</table>
 </div>
+<script src="~/tablesorter-master/jquery.tablesorter.js"></script>
+<script src="~/Scripts/invertedTablesorter.js"></script>
