--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -428,11 +428,11 @@ div.quiz .right-quiz {
 }
 
 .falseQuizAnswer {
-	background-color: lightcoral;
+	background-color: lightcoral !important;
 }
 
 .rightQuizAnswer {
-	background-color: lightgreen;
+	background-color: lightgreen !important;
 }
 
 .video-container {
