add sticky headers

--- a/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersStatistics.cshtml
@@ -52,5 +52,6 @@
 
 @section scripts {
 	<script src="~/tablesorter-master/js/jquery.tablesorter.js"></script>
+	<script src="~/tablesorter-master/js/jquery.tablesorter.widgets.min.js"></script>
 	<script src="~/Scripts/table-configurator.js"> </script>
 }
