--- a/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/TotalStatistics.cshtml
@@ -67,6 +67,7 @@
 
 @section scripts {
 	<script src="~/tablesorter-master/js/jquery.tablesorter.js"></script>
+	<script src="~/tablesorter-master/js/jquery.tablesorter.widgets.min.js"></script>
 	<script src="~/Scripts/table-configurator.js"> </script>
 }
 
