--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 	@Scripts.Render("~/modernizr-js")
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
+	<div id="header" class="navbar navbar-inverse navbar-fixed-top">
 		<button type="button" class="navbar-toggle hide-side-bar-button" data-toggle="collapse" data-target=".side-bar">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
