--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -31,11 +31,11 @@
 				<ul class="nav navbar-nav">
 					@if (User.IsInRole(LmsRoles.Admin))
 					{
-						<li>@Html.ActionLink("Admin users", "List", "Account", new{role = LmsRoles.Admin}, null)</li>
 						<li>@Html.ActionLink("Admin courses", "CourseList", "Unit")</li>
 					}
-					@if (User.IsInRole(LmsRoles.Instructor))
+					@if (User.IsInRole(LmsRoles.Admin) || User.IsInRole(LmsRoles.Instructor))
 					{
+						<li>@Html.ActionLink("Пользователи", "List", "Account", new { role = LmsRoles.Admin }, null)</li>
 						<li>@Html.ActionLink("Статистика", "SystemStatistics", "Analytics")</li>
 					}
 
@@ -50,7 +50,7 @@
 	@Scripts.Render("~/bootstrap-js")
 	@Scripts.Render("~/codemirror-js")
 	@RenderSection("scripts", required: false)
-	
+
 	<script>
 		$(function () {
 			$(".load-content")
