Prepare to make Slide serializable.

--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -19,6 +19,7 @@
 			@foreach (AcceptedSolutionInfo solution in Model.AcceptedSolutions)
 			{
 				var id = "solution_" + solution.Id;
+				var code = new CodeBlock(solution.Code, Model.Slide.Lang);
 				<div id="@id">
 					<button class="like-left-location btn @(solution.LikedAlready ? "btn-primary" : "btn-default") like-button" onclick="likeSolution(@solution.Id)">
 						<i class="glyphicon glyphicon-heart"></i>
@@ -34,7 +35,8 @@
 							</button>
 						}
 					}
-					<textarea class='code code-sample'>@solution.Code</textarea>
+
+					@Html.DisplayFor(m => code)
 				</div>
 			}
 			@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = true })
