--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/CodeBlock.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/CodeBlock.cshtml
@@ -1,3 +1,3 @@
 ﻿@model uLearn.CodeBlock
-<textarea class='code code-sample'>@Model.Code</textarea>
+<textarea class='code code-sample' data-lang="@Model.Lang">@Model.Code</textarea>
 
