--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 	<link rel="image_src" href="~/Content/logo.png">
 	<link rel="shortcut icon" href="~/favicon.ico?v=4" />
 	@Styles.Render("~/css")
+	@Styles.Render("~/flexslider/flexslider.css")
 	@Scripts.Render("~/modernizr-js")
 </head>
 <body>
