--- a/src/uLearn.Web/Views/Course/_RatesBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_RatesBar.cshtml
@@ -1,23 +1,23 @@
 ﻿@model CoursePageModel
 <form id="ratings" class="rate-buttons ctrl-group full-width">
 	<div id="ApplyRate" data-url="@Url.Action("ApplyRate", new{ courseId = Model.CourseId, slideId = Model.Slide.Id})"></div>
-	<div class="btn-group rates-bar ctrl-group" data-toggle="buttons">
-		<label class="btn btn-default no-rounds ctrl-group not-understand-btn" onclick="handleRate('NotUnderstand')" data-hover-class="btn-danger">
-			<input id="notunderstand" type="radio" name="marks" value="notunderstand">
+	<div class="btn-group-justified rates-bar ctrl-group" data-toggle="buttons">
+		<label class="btn btn-default no-rounds ctrl-group" onclick="handleRate('NotUnderstand')" data-hover-class="btn-danger" id="notunderstand">
+			<input type="radio" name="marks" value="notunderstand">
 			Непонятно
 		</label>
-		<label class="btn btn-default ctrl-group understand-btn" onclick="handleRate('Good')" data-hover-class="btn-success">
-			<input id="good" type="radio" name="marks" value="good" checked>
+		<label class="btn btn-default ctrl-group" onclick="handleRate('Good')" data-hover-class="btn-success" id="good">
+			<input type="radio" name="marks" value="good" checked>
 			Понятно
 		</label>
-		<label class="btn btn-default no-rounds ctrl-group trivial-btn" onclick="handleRate('Trivial')" data-hover-class="btn-info">
-			<input id="trivial" type="radio" name="marks" value="trivial">
+		<label class="btn btn-default no-rounds ctrl-group" onclick="handleRate('Trivial')" data-hover-class="btn-info" id="trivial">
+			<input type="radio" name="marks" value="trivial">
 			Тривиально
 		</label>
 	</div>
 	<div class="clearfix"></div>
 </form>
-<label hidden class="no-display" onclick="handleRate('NotWatched')" class="btn btn-default active">
-	<input id="notwatched" type="radio" name="marks" value="not_watched">
+<label hidden class="no-display" onclick="handleRate('NotWatched')" class="btn btn-default active" id="notwatched">
+	<input type="radio" name="marks" value="not_watched">
 	Ещё не смотрел
 </label>
