--- a/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
@@ -1,16 +1,16 @@
 ﻿@model PrevNextButtonsModel
 
-<div class="btn-group ctrl-group full-width" id="nav_arrows"
-	 data-hasnext="@(Model.HasNextSlide ? "true" : "")"
-	 data-hasprev="@(Model.HasPrevSlide ? "true" : "")"
-	 data-isaccepted="@((Model.IsPassedTask && !Model.OnSolutionsSlide) ? "true" : "")">
-	<a class="btn btn-default no-rounds ctrl-group half-width"
-	   id="prev_slide_button"
-	   href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.PrevSlideIndex})">Назад</a>
-	<a class="btn btn-default block-next no-rounds ctrl-group half-width"
-	   id="next_solutions_button"
-	   href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideIndex = Model.SlideIndex})">Далее</a>
-	<a class="btn btn-default block-next no-rounds ctrl-group half-width"
-	   id="next_slide_button"
-	   href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.NextSlideIndex})">Далее</a>
+<div class="btn-group-justified ctrl-group full-width" id="nav_arrows"
+	data-hasnext="@(Model.HasNextSlide ? "true" : "")"
+	data-hasprev="@(Model.HasPrevSlide ? "true" : "")"
+	data-isaccepted="@((Model.IsPassedTask && !Model.OnSolutionsSlide) ? "true" : "")">
+	<a class="btn btn-default no-rounds ctrl-group"
+		id="prev_slide_button"
+		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.PrevSlideIndex})">Назад</a>
+	<a class="btn btn-default block-next no-rounds ctrl-group next_button"
+		id="next_solutions_button"
+		href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideIndex = Model.SlideIndex})">Далее</a>
+	<a class="btn btn-default block-next no-rounds ctrl-group next_button"
+		id="next_slide_button"
+		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.NextSlideIndex})">Далее</a>
 </div>
