show score in slide title

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -12,7 +12,7 @@
 	<div class="container body-content">
 		<div class="row">
 			<div class='slide'>
-				<h1>@Model.Slide.Title</h1>
+				<h1>@Model.Slide.Title @GetScore(Model.Score)</h1>
 				@if (Model.Slide is QuizSlide)
 				{
 					@Html.Action("Quiz", "Quiz", new { slide = Model.Slide as QuizSlide, courseId = Model.CourseId, userId = Model.UserId })
@@ -47,3 +47,7 @@
 	}
 }
 
+@helper GetScore(Tuple<int, int> score)
+{
+	@(score.Item2 == 0 ? "" : string.Format("({0}/{1})", score.Item1, score.Item2))
+}
