--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -347,18 +347,23 @@ table.diff tbody th {
 }
 
 .reset-btn {
-	width: 25%;
-	margin-left: 0 !important;
-}
-
-.hints-btn {
-	width: 25%;
+	width: 20%;
 	margin-left: 0 !important;
 	float: right !important;
 }
 
+.hints-btn {
+	width: 20%;
+	margin-left: 0 !important;
+}
+
+.giveup-btn {
+	width: 20%;
+	margin-left: 0 !important;
+}
+
 .run-solution-button {
-	width: 50%;
+	width: 40%;
 	margin-bottom: 10px;
 	margin-left: 0 !important;
 }
