--- a/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn
+﻿@using System.Globalization
+@using uLearn
 @model uLearn.Web.Controllers.UserProgressViewModel
 
 <table class="tablesorter">
@@ -43,7 +44,7 @@
 					if (Model.Slides[i] is ExerciseSlide)
 					{
 						var styleClass = @user.SlidesSlideInfo[i].IsExerciseSolved ? "green-stat" : "red-stat";
-						<td data-sort-value="@(user.SlidesSlideInfo[i].AttemptsCount + 1000000)"
+						<td data-sort-value="@ToString(user.SlidesSlideInfo[i].AttemptsCount + 1000000)"
 						    class="@styleClass">
 							@Html.ActionLink(user.SlidesSlideInfo[i].AttemptsCount.ToString(), "ShowSolutions", new{courseId=Model.CourseId, userId=user.UserId, slideId=Model.Slides[i].Id})
 							
@@ -52,7 +53,7 @@
 					else if (Model.Slides[i] is QuizSlide)
 					{
 						var styleClass = @user.SlidesSlideInfo[i].IsQuizPassed ? "green-stat" : "red-stat";
-						<td data-sort-value="@(user.SlidesSlideInfo[i].QuizPercentage + 10000)"
+						<td data-sort-value="@ToString(user.SlidesSlideInfo[i].QuizPercentage + 10000)"
 						    class="@styleClass">
 							@(user.SlidesSlideInfo[i].QuizPercentage.ToString("P0"))
 						</td>
@@ -72,3 +73,7 @@
 <script src="~/tablesorter-master/js/jquery.tablesorter.widgets.min.js"></script>
 <script src="~/Scripts/table-configurator.js"></script>
 
+@helper ToString(double k)
+{
+	@(k.ToString(CultureInfo.InvariantCulture))
+}
