--- a/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
@@ -15,21 +15,25 @@
 					@foreach (var slide in unit.Slides)
 					{
 						var url = Url.Action("Slide", "Course", new { courseId = Model.CourseId, slideIndex = slide.Index });
-						<i class="@GetIconClass(slide) navbar-label" title="@GetTitle(slide)"></i>
-						<li class="slide-list-item @(slide == Model.CurrentSlide ? "selected" : "") " onclick="window.location.href = '@url'"><a href="@url" data-score="@GetScore(Model.ScoresForSlides[slide])">@slide.Title</a></li>
+						<li class="slide-list-item @(slide == Model.CurrentSlide ? "selected" : "") " onclick="window.location.href = '@url'">
+							<i class="@GetIconClass(slide) navbar-label" title="@GetTitle(slide)"></i>
+							<a href="@url" data-score="@GetScore(Model.ScoresForSlides[slide])" style="font: ">@slide.Title</a>
+						</li>
 					}
 					@if (User.IsInRole(LmsRoles.Instructor) && unit.InstructorNote != null)
 					{
 						var url = Url.Action("InstructorNote", "Course", new { courseId = Model.CourseId, unitName = unit.UnitName });
-						<i class="glyphicon glyphicon-eye-close navbar-label" title="Не видно студентам"></i>
-						<li class="slide-list-item slide-list-item-instructor-note" onclick="window.location.href='@url'">
+						<li class="slide-list-item slide-list-item-instructor-note" onclick="window.location.href = '@url'">
+							<i class="glyphicon glyphicon-eye-close navbar-label-privileged navbar-label" title="Не видно студентам"></i>
 							<a href="@url">Заметки преподавателю</a>
 						</li>
 					}
 					@if (User.IsInRole(LmsRoles.Instructor))
 					{
-						<i class="glyphicon glyphicon-eye-close navbar-label" title="Не видно студентам"></i>
-						<li class="slide-list-item unit-statistic-ref">@Html.ActionLink("Статистика и успеваемость", "UnitStatistics", "Analytics", new { courseId = Model.CourseId, unitName = unit.UnitName }, null)</li>
+						<li class="slide-list-item unit-statistic-ref">
+							<i class="glyphicon glyphicon-eye-close navbar-label-privileged navbar-label" title="Не видно студентам"></i>
+							@Html.ActionLink("Статистика и успеваемость", "UnitStatistics", "Analytics", new { courseId = Model.CourseId, unitName = unit.UnitName }, null)
+						</li>
 					}
 				</ul>
 			</li>
@@ -56,7 +60,7 @@
 		: (isVisited ? "navbar-label-danger" : "navbar-label-default");
 	var typeClass = slide is QuizSlide ? "glyphicon-pushpin"
 		: slide is ExerciseSlide ? (isComplete ? "glyphicon-check" : "glyphicon-edit")
-			: (isVisited ? "glyphicon-ok" : "");
+			: (isVisited ? "glyphicon-ok" : "glyphicon-none");
 	@(progressClass + " glyphicon " + typeClass)
 }
 
