add score by day

--- a/src/uLearn.Web/Views/Analytics/DailyStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/DailyStatistics.cshtml
@@ -8,6 +8,7 @@
 			<th>Дата</th>
 			<th title="Просмотрено впервые посещенных слайдов">Слайдов посещено</th>
 			<th title="Количество пройденных слайдов с задачами/тестами (несколько решений одной задачи одним пользователем считается за единицу)">Задач решено</th>
+			<th>Очков набрано</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -17,6 +18,7 @@
 				<td>@day.Day.ToString("dd.MM.yy")</td>
 				<td>@day.SlidesVisited</td>
 				<td>@day.TasksSolved</td>
+				<td>@day.Score</td>
 			</tr>
 		}
 	</tbody>
