--- a/src/uLearn.Web/Views/Account/CourseInfo.cshtml
+++ b/src/uLearn.Web/Views/Account/CourseInfo.cshtml
@@ -23,7 +23,7 @@
 				<td title="@unit.SlideVisits.Earned of @unit.SlideVisits.Total">@unit.SlideVisits</td>
 				<td title="@unit.Exercises.Earned of @unit.Exercises.Total">@unit.Exercises</td>
 				<td title="@unit.Quizes.Earned of @unit.Quizes.Total">@unit.Quizes</td>
-				<td>--</td>
+				<td title ="@unit.Total.Earned of @unit.Total.Total">@unit.Total</td>
 			</tr>
 		}
 	</table>
