fix no-round of good button

--- a/src/uLearn.Web/Views/Course/_RatesBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_RatesBar.cshtml
@@ -6,7 +6,7 @@
 			<input type="radio" name="marks" value="notunderstand">
 			Непонятно
 		</label>
-		<label class="btn btn-default ctrl-group" onclick="handleRate('Good')" data-hover-class="btn-success" id="good">
+		<label class="btn btn-default no-rounds ctrl-group" onclick="handleRate('Good')" data-hover-class="btn-success" id="good">
 			<input type="radio" name="marks" value="good" checked>
 			Понятно
 		</label>
