--- a/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
+++ b/src/uLearn.Web/Views/Course/_SolutionControl.cshtml
@@ -17,22 +17,22 @@
 <div class="solution-control btn-group ctrl-group">
 	<button type="button" class="run-solution-button btn btn-primary no-rounds"
 			data-url="@Url.Action("RunSolution", "Exercise", new {courseId = Model.CourseId, slideIndex = Model.Slide.Index})">
-		RUN
+		Run
 	</button>
 
 	@{ var e = ((ExerciseSlide)Model.Slide).HintsMd; }
 	<button id="GetHintButton" type="button" class="btn btn-default hints-btn"
 			onclick="showHintForUser('@Model.CourseId','@Model.Slide.Index', '@e.Count')"
 			data-url="@Url.Action("UseHint", "Hint")">
-		GET HINT
+		Get hint
 	</button>
 	
 	<button type="button" class="btn btn-default giveup-btn" onclick="@action">
-		SHOW SOLUTIONS
+		Show solutions
 	</button>
 
 	<button type="button" class="btn btn-default reset-btn no-rounds" onclick="cleanUserCode()">
-		RESET
+		Reset
 	</button>
 </div>
 
