--- a/src/uLearn.Web/Views/Quiz/_ChoiceBlock.cshtml
+++ b/src/uLearn.Web/Views/Quiz/_ChoiceBlock.cshtml
@@ -3,14 +3,15 @@
 @model QuizInfoModel
 @{
 	var quizBlock = (ChoiceBlock)Model.CurrentBlock;
+	var items = quizBlock.ShuffledItems();
 	var isMultiply = quizBlock.Multiple;
 	var typeInp = isMultiply ? "checkbox" : "radio";
 
 	<div class="quiz-block-mark @typeInp" id='@(quizBlock.Id + "_quizBlock")'>
-		@for (int itemIndex = 0; itemIndex < quizBlock.Items.Length; itemIndex++)
+		@for (int itemIndex = 0; itemIndex < items.Length; itemIndex++)
 		{
-			var ident = isMultiply ? itemIndex + "noMult" : Model.BlockIndex.ToString();
-			var item = quizBlock.Items[itemIndex];
+			var item = items[itemIndex];
+			var id = isMultiply ? itemIndex + "noMult" : Model.BlockIndex.ToString();
 			var itemChecked = Model.QuizState != QuizState.NotPassed && Model.QuizModel.AnswersToQuizes[quizBlock.Id].Contains(item.Id);
 			var ans = itemChecked ? "checked" : "";
 			var itemClass = "";
@@ -22,7 +23,7 @@
 			}
 			<div class="quiz">
 				<label class="@itemClass" title="@title">
-					<input @ans autocomplete="off" id='@(quizBlock.Id + "quizBlock" + item.Id)' name=@("group"+ident) type="@typeInp">
+					<input @ans autocomplete="off" id='@(quizBlock.Id + "quizBlock" + item.Id)' name=@("group"+id) type="@typeInp">
 					@item.Description.RenderTex()
 				</label>
 				@if (Model.QuizState == QuizState.Total && !String.IsNullOrEmpty(item.Explanation))
